--- a/WeatherPY/WeatherPy.ipynb
+++ b/WeatherPY/WeatherPy.ipynb
@@ -15,20 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'citipy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mapi_keys\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m weather_api_key\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# Import citipy to determine the cities based on latitude and longitude\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcitipy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m citipy\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(weather_api_key)\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'citipy'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "414444a33e95d696d68619e440ce1123\n"
      ]
     }
    ],
@@ -48,6 +44,7 @@
     "\n",
     "# Import citipy to determine the cities based on latitude and longitude\n",
     "from citipy import citipy\n",
+    "## I had to run pip install citypy\n",
     "from pprint import pprint\n",
     "\n",
     "print(weather_api_key)"
